--- a/src/main/webapp/templates/people.template.html
+++ b/src/main/webapp/templates/people.template.html
@@ -12,27 +12,27 @@
 
     <mdt-table animate-sort-icon="true"
                paginated-rows="{isEnabled: true, rowsPerPageValues: [5,10,20,100]}"
-               selectable-rows="true"
-               selected-row-callback="selectedRowCallback(rows)"
-               mdt-trigger-request="reloadPeopleTable()">
+               mdt-row="{
+                         'data' : filteredPeople,
+                         'table-row-id-key' : 'personId',
+                         'column-keys' : ['firstName','lastName','company','phone','email','tz','edit','delete']}">
+
         <mdt-header-row>
-            <mdt-column column-sort="true" align-rule="left">ID</mdt-column>
             <mdt-column column-sort="true" align-rule="left">First Name</mdt-column>
             <mdt-column column-sort="true" align-rule="left">Last Name</mdt-column>
             <mdt-column column-sort="true" align-rule="left">Company</mdt-column>
             <mdt-column align-rule="left">Phone #</mdt-column>
             <mdt-column column-sort="true" align-rule="left">Email</mdt-column>
             <mdt-column align-rule="left">Identification #</mdt-column>
+            <mdt-column align-rule="center">Edit</mdt-column>
+            <mdt-column align-rule="center">Delete</mdt-column>
+
+            <mdt-custom-cell column-key="edit" html-content="true">
+                <mdt-custom-cell-edit-button ng-click="clientScope.showRowId( rowId )">test</mdt-custom-cell-edit-button>
+            </mdt-custom-cell>
+            <mdt-custom-cell column-key="delete" html-content="true">
+                <mdt-custom-cell-delete-button ng-click="clientScope.showRowId(rowId)">test</mdt-custom-cell-delete-button>
+            </mdt-custom-cell>
         </mdt-header-row>
-        <mdt-row ng-repeat="person in filteredPeople"
-                 table-row-id="person.personId">
-            <mdt-cell>{{ person.personId }}</mdt-cell>
-            <mdt-cell>{{ person.firstName }}</mdt-cell>
-            <mdt-cell>{{ person.lastName }}</mdt-cell>
-            <mdt-cell>{{ person.company }}</mdt-cell>
-            <mdt-cell>{{ person.phone }}</mdt-cell>
-            <mdt-cell>{{ person.email }}</mdt-cell>
-            <mdt-cell>{{ person.tz }}</mdt-cell>
-        </mdt-row>
     </mdt-table>
 </div>
