refactor company --> client

--- a/src/main/webapp/templates/add.person.template.html
+++ b/src/main/webapp/templates/add.person.template.html
@@ -26,8 +26,8 @@
             </div>
             <div layout layout-sm="column">
                 <md-input-container flex>
-                    <label>Company</label>
-                    <input ng-model="user.company">
+                    <label>Client</label>
+                    <input ng-model="user.client">
                 </md-input-container>
                 <md-input-container flex>
                     <label>ID Number</label>
