--- a/src/main/webapp/templates/people.template.html
+++ b/src/main/webapp/templates/people.template.html
@@ -27,7 +27,7 @@
             <mdt-column align-rule="center">Edit</mdt-column>
 
             <mdt-custom-cell column-key="edit" html-content="true">
-                <mdt-custom-cell-edit-button ng-click="clientScope.showPersonInfoDialog( rowId )">test</mdt-custom-cell-edit-button>
+                <mdt-custom-cell-edit-button ng-click="clientScope.showPersonInfoDialog( rowId )"></mdt-custom-cell-edit-button>
             </mdt-custom-cell>
 
             <!-- ID model bind - for delete -->
