--- a/src/main/webapp/templates/calendar.template.html
+++ b/src/main/webapp/templates/calendar.template.html
@@ -1,11 +1,13 @@
-<md-card>
-    <mwl-calendar
-            view="calendarView"
-            current-day="calendarDay"
-            events="events"
-            view-title="calendarTitle"
-            on-event-click="eventClicked(calendarEvent)"
-            on-event-times-changed="calendarEvent.startsAt = calendarNewEventStart; calendarEvent.endsAt = calendarNewEventEnd"
-            cell-is-open="true">
-    </mwl-calendar>
-</md-card>
+<div layout-margin>
+    <md-card style="margin:5px;">
+        <mwl-calendar
+                view="calendarView"
+                current-day="calendarDay"
+                events="events"
+                view-title="calendarTitle"
+                on-event-click="eventClicked(calendarEvent)"
+                on-event-times-changed="calendarEvent.startsAt = calendarNewEventStart; calendarEvent.endsAt = calendarNewEventEnd"
+                cell-is-open="true">
+        </mwl-calendar>
+    </md-card>
+</div>
