fixed table refresh problems added delete client

--- a/src/main/webapp/templates/add.person.template.html
+++ b/src/main/webapp/templates/add.person.template.html
@@ -38,6 +38,6 @@
     </md-content>
     <md-dialog-actions layout="row"><span flex></span>
         <md-button ng-click="cancel()"> Cancel</md-button>
-        <md-button ng-click="addPerson()" class="md-primary">Save</md-button>
+        <md-button ng-click="addPerson();readPeople()" class="md-primary">Save</md-button>
     </md-dialog-actions>
 </md-dialog>
