--- a/src/main/webapp/templates/clients.template.html
+++ b/src/main/webapp/templates/clients.template.html
@@ -39,4 +39,8 @@
             </mdt-custom-cell>
         </mdt-header-row>
     </mdt-table>
+
+    <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="showAddClientDialog($event)">
+        <ng-md-icon icon="add"></ng-md-icon>
+    </md-button>
 </div>
