--- a/src/main/webapp/templates/main.html
+++ b/src/main/webapp/templates/main.html
@@ -1,5 +1,5 @@
 <div layout-margin>
     <md-card style="margin:15px;padding:15px">
-        <h1>Welcome!</h1>
+        <h1>{{message}}</h1>
     </md-card>
 </div>
