--- a/src/main/webapp/templates/people.template.html
+++ b/src/main/webapp/templates/people.template.html
@@ -11,7 +11,8 @@
     </md-card>
 
     <mdt-table animate-sort-icon="true"
-               paginated-rows="{isEnabled: true, rowsPerPageValues: [5,10,20,100]}"
+               paginated-rows="{isEnabled: true, rowsPerPageValues: [20]}"
+               ripple-effect="true"
                mdt-row="{
                          'data' : people,
                          'table-row-id-key' : 'personId',
