--- a/src/main/webapp/templates/client.info.template.html
+++ b/src/main/webapp/templates/client.info.template.html
@@ -39,6 +39,6 @@
     <md-dialog-actions layout="row"><span flex></span>
         <md-button class="md-warn" ng-click="confirmDeleteClient()">Delete</md-button>
         <md-button ng-click="cancel()"> Cancel</md-button>
-        <md-button class="md-primary">Update</md-button>
+        <md-button class="md-primary" ng-click="updateClient()">Update</md-button>
     </md-dialog-actions>
 </md-dialog>
