--- a/src/main/webapp/templates/add.image.template.html
+++ b/src/main/webapp/templates/add.image.template.html
@@ -33,6 +33,6 @@
         </div>
     </div>
     <div layout="row" align="right">
-        <md-button class="md-raised md-warn" ng-click="cancel()">OK</md-button>
+        <md-button class="md-raised md-warn" ng-click="hide()">OK</md-button>
     </div>
 </md-dialog>
